--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:23.1.1'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.google.code.gson:gson:2.4'
 }
